Random white space issue resolved - was in section-two, 900px, nav

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ div.playerBox {
     min-height: 100vh;
     background: #0D0D0D;
     padding: 20px 5vh;
+    
 }
 
 .section-two h2 {
@@ -87,9 +88,9 @@ ol.body_li {
 } 
 
 
+
 /* Begin tablet sizing */
 @media only screen and (min-width: 900px) {
-
     .section-main h1 {
         font-size: 60px;
     }
@@ -104,6 +105,8 @@ ol.body_li {
     }
     .section-two{
         width: 100%;
+        padding: 0;
+        margin: 20px 5vh;
     }
 
     .content{
