--- a/css/navigation.css
+++ b/css/navigation.css
@@ -15,6 +15,7 @@ body {
 nav {
     background: #222;
     padding: 0 15px;
+
 }
 
 a {
@@ -26,6 +27,7 @@ a {
 .submenu {
     list-style-type: none;
     z-index: 5;
+    box-sizing: border-box;
 }
 
 .logo {
@@ -127,6 +129,7 @@ a {
 
 /* Tablet menu */
 @media only screen and (min-width: 900px) {
+
     .menu {
         justify-content: center;
         z-index: 5;
